// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BottomBar > renders 3 items and matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="min-height: 400px; background: white;"
  >
    <nav
      aria-label="Bottom navigation"
      class="sticky bottom-0 left-0 w-full flex justify-between items-center bg-white border-t border-border shadow-xs z-40 safe-bottom px-8 py-1 h-16 text-base"
      role="navigation"
    >
      <div
        aria-current="page"
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 font-semibold text-coral"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-house"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
          />
          <path
            d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
        </svg>
        <span
          class="text-xs mt-0.5"
        >
          Home
        </span>
      </div>
      <div
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 text-slate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span
          class="text-xs mt-0.5"
        >
          Search
        </span>
      </div>
      <div
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 text-slate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span
          class="text-xs mt-0.5"
        >
          Profile
        </span>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`BottomBar > renders 5 items and matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="min-height: 400px; background: white;"
  >
    <nav
      aria-label="Bottom navigation"
      class="sticky bottom-0 left-0 w-full flex justify-between items-center bg-white border-t border-border shadow-xs z-40 safe-bottom px-8 py-1 h-16 text-base"
      role="navigation"
    >
      <div
        aria-current="page"
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 font-semibold text-coral"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-house"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
          />
          <path
            d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
        </svg>
        <span
          class="text-xs mt-0.5"
        >
          Home
        </span>
      </div>
      <div
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 text-slate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span
          class="text-xs mt-0.5"
        >
          Search
        </span>
      </div>
      <div
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 text-slate"
      >
        <button
          aria-disabled="false"
          aria-label="Add Transaction"
          class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none bg-coral text-white hover:bg-coral/90 focus-visible:ring-coral-soft focus-visible:ring-offset-white shadow-sm hover:shadow-md h-10 w-10 rounded-full"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus inline-flex items-center justify-center w-5 h-5 text-neutral"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 text-slate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span
          class="text-xs mt-0.5"
        >
          Settings
        </span>
      </div>
      <div
        class="flex flex-col items-center justify-center gap-1 px-2 py-1 text-slate"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span
          class="text-xs mt-0.5"
        >
          Profile
        </span>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
